--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Please</title>
-    <meta name="author" content="name" />
-    <meta name="description" content="description here" />
-    <meta name="keywords" content="keywords,here" />
+    <title>olivr</title>
+    <meta name="author" content="olivr.com" />
+    <meta name="description" content="Olivr is an AI co-founder for your startup. He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc." />
+    <meta name="keywords" content="technical co-founder, bootstrap startup, create startup, virtual assistant, ai assistant, cto cofounder, co-founder, cmo co-founder, cmo assistant, ai co-founder" />
     <link
       defer
       rel="stylesheet"
@@ -22,11 +22,12 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title is-1">
-            Please
+            olivr
           </h1>
           <h2 class="subtitle is-3">
-            Your startup, from idea to production in 5mn
+            Olivr is an AI co-founder for your startup.
           </h2>
+          <p>He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc.</p>
           <div class="columns">
             <div class="box column is-narrow has-background-white-bis">
               <h3 class="subtitle is-4 has-text-dark">
