--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>olivr</title>
+    <title>Oliv'r</title>
     <meta name="author" content="olivr.com" />
-    <meta name="description" content="Olivr is an AI co-founder for your startup. He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc." />
+    <meta name="description" content="Oliv'r is an AI co-founder for your startup. He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc." />
     <meta name="keywords" content="technical co-founder, bootstrap startup, create startup, virtual assistant, ai assistant, cto cofounder, co-founder, cmo co-founder, cmo assistant, ai co-founder" />
     <link
       defer
@@ -22,10 +22,10 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title is-1">
-            olivr
+            Oliv'r
           </h1>
           <h2 class="subtitle is-3">
-            Olivr is an AI co-founder for your startup.
+            Oliv'r is an AI co-founder for your startup.
           </h2>
           <p>He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc.</p>
           <div class="columns">
