Update with latest branding

--- a/index.html
+++ b/index.html
@@ -6,35 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Oliv'r</title>
     <meta name="author" content="olivr.com" />
-    <meta name="description" content="Oliv'r is an AI co-founder for your startup. He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc." />
-    <meta name="keywords" content="technical co-founder, bootstrap startup, create startup, virtual assistant, ai assistant, cto cofounder, co-founder, cmo co-founder, cmo assistant, ai co-founder" />
+    <meta
+      name="description"
+      content="Oliv'r is an AI co-founder for your startup. Oliv'r can help you in Branding, Marketing, Finance, Infrastructure, Software Engineering and so much more."
+    />
+    <meta
+      name="keywords"
+      content="technical co-founder, bootstrap startup, create startup, virtual assistant, ai assistant, cto cofounder, co-founder, cmo co-founder, cmo assistant, ai co-founder"
+    />
     <link
       defer
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"
     />
+    <link rel="icon" type="image/png" href="img/icon_32.png" />
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="js/main.js"></script>
     <link defer rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="hero is-success is-fullheight has-background-dark">
-      <div class="hero-body">
+    <section class="hero is-success is-fullheight has-background-white">
+      <div class="hero-body has-text-dark">
         <div class="container">
-          <h1 class="title is-1">
-            Oliv'r
-          </h1>
-          <h2 class="subtitle is-3">
+          <img src="img/logo_rect_200.png" alt="Oliv'r" />
+          <h2 class="subtitle is-3 has-text-dark">
             Oliv'r is an AI co-founder for your startup.
           </h2>
-          <p>He's knowledgeable about what makes a successful startup and will help you make better decisions. He is technically skilled and will do menial tasks such as setting up an email account for a new employee, updating your social media profiles, etc.</p>
+          <p>
+            He knows how to create a startup, from branding to cloud
+            infrastructure. He's been there already and will let you focus on
+            what matters to you.
+          </p>
           <div class="columns">
             <div class="box column is-narrow has-background-white-bis">
               <h3 class="subtitle is-4 has-text-dark">
                 <label for="email">Get updates or join our beta</label>
               </h3>
 
-              <div id="success" style="display:none">
+              <div id="success" style="display: none;">
                 <h1 class="title is-5 has-text-dark">
                   🎉 Thank you for signing up 🎉
                 </h1>
@@ -80,11 +89,6 @@
           </div>
         </div>
       </div>
-      <img
-        alt="Milky Way"
-        class="hero-background is-transparent"
-        src="img/background.jpg"
-      />
     </section>
   </body>
 </html>
